--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sourav Kumar Khan - Portfolio</title>
+    <title>Sourav Kumar Khan - Professional Portfolio</title>
     <style>
         :root {
-            --primary-color: #3498db;
-            --secondary-color: #2c3e50;
+            --primary-color: #2c3e50;
+            --secondary-color: #3498db;
             --accent-color: #e74c3c;
             --background-color: #f4f4f4;
             --text-color: #333;
         }
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: var(--text-color);
             background-color: var(--background-color);
@@ -21,7 +21,7 @@
             padding: 0;
         }
         .container {
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
             background-color: white;
@@ -30,69 +30,103 @@
         header {
             background-color: var(--primary-color);
             color: white;
-            padding: 40px 20px;
+            padding: 60px 20px;
             text-align: center;
         }
         h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 3em;
+            font-weight: 700;
         }
         h2 {
             color: var(--secondary-color);
-            border-bottom: 2px solid var(--primary-color);
+            border-bottom: 2px solid var(--secondary-color);
             padding-bottom: 10px;
+            font-size: 2em;
         }
         .section {
             margin-bottom: 40px;
-            padding: 20px;
+            padding: 30px;
             background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .skills {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 15px;
         }
         .skill {
-            background-color: var(--primary-color);
+            background-color: var(--secondary-color);
             color: white;
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-size: 0.9em;
-            transition: transform 0.2s;
+            padding: 8px 20px;
+            border-radius: 25px;
+            font-size: 1em;
+            transition: transform 0.2s, box-shadow 0.2s;
         }
         .skill:hover {
-            transform: scale(1.05);
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         .experience {
             margin-bottom: 30px;
+            padding: 20px;
+            border-left: 4px solid var(--secondary-color);
+            background-color: #f9f9f9;
         }
         .experience h3 {
             color: var(--accent-color);
+            margin-top: 0;
         }
         .hidden {
             display: none;
         }
-        #toggleBtn {
+        .btn {
             background-color: var(--secondary-color);
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px 25px;
             cursor: pointer;
             border-radius: 5px;
             font-size: 1em;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.2s;
+            display: inline-block;
+            text-decoration: none;
+            margin-top: 20px;
         }
-        #toggleBtn:hover {
+        .btn:hover {
             background-color: var(--primary-color);
+            transform: translateY(-2px);
         }
         a {
-            color: var(--primary-color);
+            color: var(--secondary-color);
             text-decoration: none;
+            transition: color 0.3s;
         }
         a:hover {
-            text-decoration: underline;
+            color: var(--accent-color);
+        }
+        .contact-info {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .contact-info p {
+            margin: 10px 0;
+        }
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+            header {
+                padding: 40px 10px;
+            }
+            h1 {
+                font-size: 2.5em;
+            }
+            .section {
+                padding: 20px;
+            }
         }
     </style>
 </head>
@@ -100,20 +134,23 @@
     <header>
         <h1>Sourav Kumar Khan</h1>
         <p>Machine Learning Engineer</p>
+        <a href="./resume.pdf" download class="btn">Download Resume</a>
     </header>
 
     <div class="container">
         <section class="section">
             <h2>Contact Information</h2>
-            <p>📱 Mobile: 7908341191</p>
-            <p>📧 Email: khansourav1999@gmail.com</p>
-            <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/sourav-kumar-khan-91639b1a1" target="_blank">www.linkedin.com/in/sourav-kumar-khan-91639b1a1</a></p>
-            <p>🐱 GitHub: <a href="https://github.com/Sourav-Kumar-Khan" target="_blank">github.com/Sourav-Kumar-Khan</a></p>
+            <div class="contact-info">
+                <p>📱 Mobile: 7908341191</p>
+                <p>📧 Email: khansourav1999@gmail.com</p>
+                <p>🔗 <a href="https://www.linkedin.com/in/sourav-kumar-khan-91639b1a1" target="_blank">LinkedIn</a></p>
+                <p>🐱 <a href="https://github.com/Sourav-Kumar-Khan" target="_blank">GitHub</a></p>
+            </div>
         </section>
 
         <section class="section">
             <h2>Summary</h2>
-            <p>Machine Learning Engineer with 2 years of experience in a high-growth startup. Proficient in managing end-to-end ML pipelines, including data collection, analysis, to API creation, and deployment on production servers. Skilled in transforming business requirements into technical solutions and leading teams to develop real-world products. Passionate about leveraging large language models to innovate and optimize processes in various business domains.</p>
+            <p>Experienced Machine Learning Engineer with 2 years in a high-growth startup environment. Specialized in end-to-end ML pipeline management, from data collection and analysis to API creation and production deployment. Adept at translating business requirements into technical solutions and leading teams in developing real-world products. Passionate about leveraging large language models to drive innovation and optimize processes across various business domains.</p>
         </section>
 
         <section class="section">
@@ -179,7 +216,7 @@
             </ul>
         </section>
 
-        <button id="toggleBtn">Show More</button>
+        <button id="toggleBtn" class="btn">Show More</button>
         <section id="moreInfo" class="hidden section">
             <h2>Languages</h2>
             <ul>
