--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <header>
         <h1>Sourav Kumar Khan</h1>
         <p>Machine Learning Engineer</p>
-        <a href="./resume.pdf" download class="btn">Download Resume</a>
+        <a href="resume.pdf" download class="btn">Download Resume</a>
     </header>
 
     <div class="container">
