update the icons

--- a/index.html
+++ b/index.html
@@ -142,9 +142,14 @@
             <h2>Contact Information</h2>
             <div class="contact-info">
                 <p>📱 Mobile: 7908341191</p>
-                <p>📧 Email: khansourav1999@gmail.com</p>
-                <p>🔗 <a href="https://www.linkedin.com/in/sourav-kumar-khan-91639b1a1" target="_blank">LinkedIn</a></p>
-                <p>🐱 <a href="https://github.com/Sourav-Kumar-Khan" target="_blank">GitHub</a></p>
+                <p>📧 Email: <a href="mailto:khansourav1999@gmail.com">khansourav1999@gmail.com</a></p>
+                <p><a href="https://www.linkedin.com/in/sourav-kumar-khan-91639b1a1" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" width="20" height="20"/> LinkedIn
+                </a></p>
+                <p><a href="https://github.com/Sourav-Kumar-Khan" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" width="20" height="20"/> GitHub
+                </a></p>
+
             </div>
         </section>
 
